# oresat-star-tracker-software

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gen.py  lost.py  od.yaml  oresat-star-trackerd.service  package.sh  pyproject.toml  requirements.txt  scratch.py  setup.py  startracker.py  startracker_daemon.py
.github/workflows/: pypi.yaml  tests.yaml
config/: oresat-star-tracker.service
config/debfiles/: control  postinst  postrm  preinst  prerm
configs/: oresat-startracker.service  oresat-startrackerd.service
cots_files/data/: k.npy  m.npy  q.npy  u.npy
cots_files/data/cam_config/: generic_cam_params.json
cots_files/py_src/tools/camera_calibration/tetra/debug/: tetra3.txt
data/snaps/: README.txt
data/solves/: README.txt
debfiles/: control  postinst  postrm  preinst  prerm
debian/: changelog  control  oresat-star-tracker-data.install  oresat-star-tracker-data.postrm  oresat-star-tracker.install  oresat-star-tracker.postinst  oresat-star-tracker.prerm  postinst
docs/: conf.py  index.rst
misc/old-code/: old_startracker.py
native/: bindings.cpp
oresat_star_tracker/: __init__.py  __main__.py  _lost_core.cpp  ar013x.py  beast_test.py  camera.py  can_interface_test.py  solver.py  solver_test.py  star_tracker.py  star_tracker_client.py  star_tracker_resource.py  star_tracker_service.py  utils.py  utils_test.py
oresat_star_tracker/beast/: Makefile  constellations.h
oresat_star_tracker/client/: star_tracker_client.py
oresat_star_tracker/data/: oresat_app.eds  oresat_star_tracker.dcf  oresat_star_tracker.eds  star_tracker.dcf  star_tracker.eds
oresat_star_tracker/lost/: __init__.py  types.py  utils.py  wrapper.py
oresat_star_tracker/lost_py_wrapper/: lost.py  utils.py
oresat_star_tracker/templates/: camera.html  star_track.html  star_tracker.html
oresat_star_tracker/ui/: __init__.py  index.tpl
scripts/: start  subscribe_oreintation.py  trigger_capture.py  trigger_capture.sh
src/: daemon.py  main.py  todo.txt
src/camera/: camera.py
src/snapper/: __init__.py  snapper.py
src/solver/: solver.py
src/startracker/: __init__.py  startracker.py
src/stcam/: __init__.py  stcam.py
star_tracker/: __init__.py  __main__.py  main.py  star_tracker.py
star_tracker/beast/: __init__.py  constellations.h
star_tracker/snapper/: snapper.py
star_tracker/solver/: solver.py
test/integration/: test_can_interface.py  test_star_tracker_interface.py
test/unit/: test_beast.py  test_contours.py  test_countours.py  test_solver.py  utils.py  utils_test.py
tests/: test_beast.py  test_camera.py  test_contours.py  test_lost.py  test_lost_native.py  test_main.py  test_solver.py  test_star_tracker_service.py
tests/unit/: test_contours.py
web_app/: __main__.py  stream_handler.py
web_app/templates/: stream.html
