[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-star-tracker"
description = "OreSat Star Tracker app"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "bottle",
    "imagecodecs",
    "numpy",
    "imageio",
    "opencv-python-headless==4.6.0.66",
    "oresat-cand",
    "tifffile",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "oresat-configs>=1.0.0",
    "ruff",
]

[project.scripts]
oresat-star-tracker = "oresat_star_tracker.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.tpl", "*.csv"]

[tool.setuptools_scm]
version_file = "oresat_star_tracker/_version.py"

[tool.ruff]
line-length = 100
