[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-star-tracker"
description = "OreSat Star Tracker OLAF app"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Embedded Systems",
]
dynamic = ["version"]
dependencies = [
    #LOST star tracker isn't on pypi, it's on a branch in the main LOST repo
    "lost @ https://github.com/UWCubeSat/lost/archive/refs/heads/alniss-basic-python-interface.zip",
    "numpy",
    "opencv-python-headless",
    "oresat-olaf>=3.6.5",
    "tifffile",
]

[project.optional-dependencies]
dev = [
    "build >= 1.3.0",
    "mypy >= 1.18.2",
    "ruff >= 0.14.0",
    "setuptools",
    "setuptools-scm",
]


[project.scripts]
oresat-star-tracker = "oresat_star_tracker.__main__:main"

[tool.setuptools.package-data]
"*" = ["*.html"]

[tool.setuptools_scm]
write_to = "oresat_star_tracker/_version.py"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[[tool.mypy.overrides]]
module = "olaf,lost"
ignore_missing_imports = true
