[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "pybind11>=2.12",
    "numpy",
    "setuptools_scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "oresat-star-tracker"
description = "OreSat Star Tracker OLAF app"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Embedded Systems",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "pillow",
    "colour-demosaicing",
    "oresat-olaf==3.6.5",
    "tifffile",
]

[dependency-groups]
dev = [
    "mypy >= 1.18.2",
    "ruff >= 0.14.0",
]


[project.scripts]
oresat-star-tracker = "oresat_star_tracker.__main__:main"

[tool.scikit-build]
minimum-version = "0.9"

[tool.scikit-build.cmake]
version = ">=3.20"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.sdist]
include = ["oresat_star_tracker/_version.py"]

[tool.scikit-build.wheel]
packages = ["oresat_star_tracker"]

[tool.setuptools_scm]
write_to = "oresat_star_tracker/_version.py"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[[tool.mypy.overrides]]
module = "olaf,lost,_lost_core"
ignore_missing_imports = true
